# sky_imaging

./: .buildinfo  .gitattributes  .gitignore  LICENSE.txt  NOTICE.txt  README.md  camera_data.html  genindex.html  index.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: camera_data.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/manual/: docs_daq.doctree  geom_self_calibration.doctree  getting_started.doctree  index.doctree
.github/workflows/: main.yml
_sources/manual/: geom_self_calibration.md.txt  getting_started.md.txt
asi_core/: asi_analysis.py  basics.py  camera.py  camera_data.schema.yaml  config.py  constants.py  hdr_creation.py  io.py  logger.py  make_dataset.py  matlab_converters.py  meteo.py  ocam.py  real_time_utility_functions.py  transform.py
asi_core/calibration/: __main__.py  celestial_bodies.py  mask_creation.py  mask_creation_cfg.yaml  process_self_calibration.py  self_calibration.py  self_calibration_cfg.yaml
asi_core/daq/: url_image_receiver.py
asi_core/util/: mask_creation.py  mobotix.py
asi_core/visualization/: asi_keogram.py  masking.py  timeseries.py  video.py
autoapi/: index.html
autoapi/asi_core/: index.html
autoapi/mask_creation/: index.html
autoapi/mobotix/: index.html
docs/: camera_data.html  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: camera_data.rst.txt
docs/autoapi/: index.html
manual/: docs_daq.html  geom_self_calibration.html  getting_started.html  index.html
(+125 files in other folders)
